Using the repl policy in container to choose partition (#934)
This commit adds the ability in the Router to choose a partition to
write to based on the replication policy defined in the container